# PR_repot

./: .env.example  CLAUDE.md  README.md  mockup-module-architecture-map.html  mockup-pr-report-120.html  pyproject.toml  spec-pr-comprehension-report.md
archmap/: api.py  contracts.py  render.py  storage.py  ui.py  verify.py
docs/plans/: 2026-07-17-phase0-deterministic-skeleton.md
schemas/: architecture.schema.json  pr-delta.schema.json
templates/: pr_report.html.j2
tests/: test_api.py  test_contracts.py  test_render.py  test_storage.py  test_ui.py  test_verify.py
tests/fixtures/: architecture_120.json  pr_delta_120.json
